13.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: resource-pod
  name: resource-pod
spec:
  containers:
  - image: nginx
    name: resource-pod
    resources: 
      requests:
        cpu: 100m
        memory: 200Mi
      limits:
        cpu: 200m
        memory: 400Mi
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
