15.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: multi-container-pod
  name: multi-container-pod
spec:
  containers:
  - args:
    - sleep
    - "3600"
    image: busybox
    name: busybox
  - image: nginx:latest
    name: multi-container-pod
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
