3.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: configmap-pod
  name: configmap-pod
spec:
  volumes:
    - name: myvol
      configMap:
        name: app-config
  containers:
  - args:
    - sh
    - -c
    - cat /etc/config/app.properties && sleep 3600
    image: busybox:1.31.0
    name: configmap-pod
    volumeMounts:
    - name: myvol
      mountPath: /etc/config
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
