4.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: readiness-demo
  name: readiness-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: readiness-demo
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: readiness-demo
    spec:
      containers:
      - image: nginx:latest
        name: nginx
        command: ['sh','-c','touch /healthz']
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5 
        resources: {}
status: {}
