pod.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: app-pod
  name: app-pod
spec:
  containers:
  - image: nginx:1.19
    name: app-pod
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
